--- a/index_ajax.html
+++ b/index_ajax.html
@@ -22,13 +22,13 @@
     <div id="root">
       <div class="container">
         <div class="row">
-          <div class="col" v-for="">
+          <div class="col" v-for="song in songs">
             <div class="card-content">
-              <img src="<?php echo $song['poster']; ?>" alt="<?php echo $song['poster']; ?>">
-              <span class="text-tile"><?php echo $song['title']; ?></span>           
+              <img :src="song.poster" :alt="song.poster">
+              <span class="text-tile">{{song.title}}</span>           
               <div class="cont-subtitle">
-                <span class="subtitle"><?php echo $song['author']; ?></span>
-                <span class="subtitle"><?php echo $song['year']; ?></span>
+                <span class="subtitle">{{song.author}}</span>
+                <span class="subtitle">{{song.year}}</span>
               </div>          
             </div>
           </div>     
